// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAP] Home view displays overlay loader as expected 1`] = `
<div
  className="sc-bxivhb EYjjH"
>
  <div
    className="sc-bdVaJa kdDLWk"
  />
  <header
    className="sc-htpNat evPKAK"
  >
    <img
      alt="logo"
      className="sc-bwzfXH ldyXqg"
      src="logo.svg"
    />
    <h2>
      Welcome to 
    </h2>
  </header>
  <p>
    Head to the 
    <a
      href="/about"
      onClick={[Function]}
      onMouseDown={false}
      onTouchStart={false}
      target={undefined}
    >
      About Page
    </a>
    .
  </p>
</div>
`;

exports[`[SNAP] Home view loads and renders as expected 1`] = `
<div
  className="sc-bxivhb EYjjH"
>
  <header
    className="sc-htpNat evPKAK"
  >
    <img
      alt="logo"
      className="sc-bwzfXH ldyXqg"
      src="logo.svg"
    />
    <h2>
      Welcome to 
      React
    </h2>
  </header>
  <p>
    Head to the 
    <a
      href="/about"
      onClick={[Function]}
      onMouseDown={false}
      onTouchStart={false}
      target={undefined}
    >
      About Page
    </a>
    .
  </p>
</div>
`;
